--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,16 @@
-﻿@*
+﻿@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 @{
 } 
 <h2>Index</h2>
-    
+    <environment include="Development">
+        This is Development enviroment
+         <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    </environment>
+    <environment names ="Production">
+        This is Production enviroment
+         <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    </environment>
     <a href="/Home/Create">Create</a>
