--- a/Views/Home/Create.cshtml
+++ b/Views/Home/Create.cshtml
@@ -11,16 +11,28 @@
 <head>
     
     <title>Create</title>
-   
+    
+    <style>
+        .field-validation-error {
+            color: red;
+        }
+        .validation-summary-errors {
+            color: red;
+        }
+    </style>
+
 </head>
 <body>
     <h2>Create</h2>
 
    <form asp-action ="Create" asp-controller ="Home" method="post">  
-      
+      <div asp-validation-summary="All">
+            <span>Please correct the following errors</span>
+        </div>
+
         <label asp-for="Name"></label>
         <input   asp-for="Name" />
-
+        <span asp-validation-for="Name"></span>
        
         <label asp-for="Rate"></label>
         <input  asp-for="Rate" asp-format="{0:N0}" /> 
